--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         <p>
                             Socail media application like Instagram user can login and uplode images cloudinary for the
                             image handling admin can crud everything in the app
-                            <a href="https://www.behance.net/">Project Link</a>.
+                            <a href="#">Project Link</a>.
                         </p>
                     </div>
                 </div> <!-- entry -->
