--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
                 <div class="column entry">
                     <a href="images/folio/gallery/g-turban.png" class="entry__link glightbox"
-                        data-glightbox="title: White Knit Cap; description: .entry__desc-01">
+                        data-glightbox="title: Billing System; description: .entry__desc-01">
                         <div class="entry__thumb">
                             <img src="images/folio/white_turban.jpg"
                                 srcset="images/folio/white_turban.png 1x, images/folio/white_turban@2x.png 2x" alt="">
@@ -317,7 +317,7 @@
 
                 <div class="column entry">
                     <a href="images/folio/gallery/g-woodcraft.png" class="entry__link glightbox"
-                        data-glightbox="title: WoodCraft; description: .entry__desc-02">
+                        data-glightbox="title: Website animation; description: .entry__desc-02">
                         <div class="entry__thumb">
                             <img src="images/folio/g-woodcraft.png"
                                 srcset="images/folio/g-woodcraft.png 1x, images/folio/woodcraft@2x.jpg 2x" alt="">
@@ -338,7 +338,7 @@
 
                 <div class="column entry">
                     <a href="images/folio/gallery/g-tulips.png" class="entry__link glightbox"
-                        data-glightbox="title: Caffeine & Tulips; description: .entry__desc-03">
+                        data-glightbox="title: Socail Media Webiste; description: .entry__desc-03">
                         <div class="entry__thumb">
                             <img src="images/folio/caffeine_and_tulips.jpg"
                                 srcset="images/folio/caffeine_and_tulips.jpg 1x, images/folio/caffeine_and_tulips@2x.jpg 2x"
@@ -362,7 +362,7 @@
 
                 <div class="column entry">
                     <a href="images/folio/gallery/g-tropical.png" class="entry__link glightbox"
-                        data-glightbox="title: Tropical; description: .entry__desc-06">
+                        data-glightbox="title: AttendanceSystem; description: .entry__desc-06">
                         <div class="entry__thumb">
                             <img src="images/folio/tropical.jpg"
                                 srcset="images/folio/tropical.jpg 1x, images/folio/tropical@2x.jpg 2x" alt="">
